# QPinnableTabWidget

./: CMakeLists.txt
include/: QPinnableTabWidget  QPinnableTabWidget.h
src/: FakeCloseButton.cpp  FakeCloseButton.h  QPinnableTabWidget.cpp  RealCloseButton.cpp  RealCloseButton.h
